tests/rpm-pkgs/irqbalance-1.7.0-8.fc35/output-exp@symbiotic/scan-results.err
Error: COMPILER_WARNING:
irqbalance-1.7.0/ui/ui.c:17:4: warning[-Wstring-concatenation]: suspicious concatenation of string literals in an array initialization; did you mean to separate the elements with a comma?
#                        "Virt Event"};
#                        ^
irqbalance-1.7.0/ui/ui.c:16:4: note: place parentheses around the string literal to silence warning
#                        "10-Gigabit Ethernet,"
#                        ^
#   15|   			"Gigabit Ethernet",
#   16|   			"10-Gigabit Ethernet,"
#   17|-> 			"Virt Event"};
#   18|   
#   19|   void show_frame()
